--- a/DreamIsland/Views/Cars/Details.cshtml
+++ b/DreamIsland/Views/Cars/Details.cshtml
@@ -38,11 +38,11 @@
             @if (User.IsAdmin())
             {
                 <a asp-controller="Cars" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a>
-                <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
+                <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#tips-@Model.Id">
                     Delete
                 </button>
             }
-            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="tips-@Model.Id" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
