--- a/DreamIsland/Areas/Admin/Views/Collectibles/All.cshtml
+++ b/DreamIsland/Areas/Admin/Views/Collectibles/All.cshtml
@@ -31,7 +31,28 @@
                     <a asp-area="" asp-controller="Collectibles" asp-action="Edit" asp-route-id="@collectible.Id" class="btn btn-warning">Edit</a>
                 </td>
                 <td>
-                    <a asp-area="" asp-controller="Collectibles" asp-action="Delete" asp-route-id="@collectible.Id" class="btn btn-danger">Delete</a>
+                    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#tips-@collectible.Id">
+                        Delete
+                    </button>
+                    <div class="modal fade" id="tips-@collectible.Id" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title col-12 text-center" id="exampleModalLabel">Delete confirmation</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    Are you sure you want to delete @collectible.Name?
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <a asp-area="" asp-controller="Collectibles" asp-action="Delete" asp-route-id="@collectible.Id" class="btn btn-danger">Delete</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </td>
             </tr>
         }
