--- a/DreamIsland/Views/Celebrities/Details.cshtml
+++ b/DreamIsland/Views/Celebrities/Details.cshtml
@@ -19,34 +19,62 @@
                 <div class="card card-body">
                     @Model.Description
                 </div>
-            </div>
-            @if (User.IsAdmin())
-            {
-                <a asp-controller="Celebrities" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a>
-                <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#tips-@Model.Id">
-                    Delete
-                </button>
-            }
-            <div class="modal fade" id="tips-@Model.Id" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title col-12 text-center" id="exampleModalLabel">Delete confirmation</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
+                </p>
+                <div class="col-md-6 offset-3">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+
+                            @for (int i = 0; i < Model.Gallery.Count(); i++)
+                            {
+                                <li data-target="#carouselExampleIndicators" data-slide-to="@i" class="@(i==0 ? "active" : "") "></li>
+                            }
+                        </ol>
+                        <div class="carousel-inner">
+                            @for (int i = 0; i < Model.Gallery.Count(); i++)
+                            {
+                                <div class="@(i==0 ? "carousel-item active" : "carousel-item") ">
+                                    <img class="d-block w-100" src="@Model.Gallery[i].URL" alt="@Model.Gallery[i].Name">
+                                </div>
+                            }
+
                         </div>
-                        <div class="modal-body">
-                            Are you sure you want to delete @Model.Name?
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <a asp-controller="Celebrities" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Delete</a>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+                @if (User.IsAdmin())
+                {
+                    <a asp-controller="Celebrities" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a>
+                    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#tips-@Model.Id">
+                        Delete
+                    </button>
+                }
+                <div class="modal fade" id="tips-@Model.Id" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title col-12 text-center" id="exampleModalLabel">Delete confirmation</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                Are you sure you want to delete @Model.Name?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <a asp-controller="Celebrities" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Delete</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
     </div>
 </div>
 
