--- a/DreamIsland/Views/Celebrities/_CelebrityFormPartial.cshtml
+++ b/DreamIsland/Views/Celebrities/_CelebrityFormPartial.cshtml
@@ -3,7 +3,7 @@
 <div class="row">
     <div class=" offset-lg-2 col-lg-8 col-sm-12 offset-xl-3 col-xl-6">
         <h2 class="text-center">@ViewBag.FormTitle</h2>
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <label asp-for="Name"></label>
                 <input asp-for="Name" class="form-control" placeholder="Enter celebrity name...">
@@ -28,6 +28,22 @@
                 <label asp-for="Age"></label>
                 <input asp-for="Age" type="number" class="form-control" placeholder="Please fill celebrity age if known...">
                 <span asp-validation-for="Age" class="small text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="CoverPhoto" class="control-label"></label>
+                <div class="custom-file">
+                    <input asp-for="CoverPhoto" class="custom-file-input" id="customFile">
+                    <label class="custom-file-label" for="customFile">Choose File</label>
+                </div>
+                <span asp-validation-for="CoverPhoto" class="small text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="GalleryFiles" class="control-label"></label>
+                <div class="custom-file">
+                    <input asp-for="GalleryFiles" class="custom-file-input" id="customFile">
+                    <label class="custom-file-label" for="customFile">Choose Files</label>
+                </div>
+                <span asp-validation-for="GalleryFiles" class="small text-danger"></span>
             </div>
             <div class="row justify-content-center">
                 <input class="btn btn-primary mt-4" type="submit" value="@ViewBag.FormTitle" />
