Implemented functionality to add image for cars and islands.

--- a/DreamIsland/Views/Cars/_CarsPartial.cshtml
+++ b/DreamIsland/Views/Cars/_CarsPartial.cshtml
@@ -4,8 +4,8 @@
     @foreach (var car in Model)
     {
         <div class="col-md-4">
-            <div class="card">
-                <img class="card-img-top" src=@car.ImageUrl alt=@(car.Brand + " " + car.Model)>
+            <div class="card mb-3">
+                <img class="card-img-top" src=@car.ImageUrl alt=@(car.Brand + " " + car.Model) height="400">
                 <div class="card-body text-center">
                     <h5 class="card-title text-center">@(car.Brand + " " + car.Model)</h5>
                     <p>@car.Year</p>
