--- a/DreamIsland/Views/Shared/_Layout.cshtml
+++ b/DreamIsland/Views/Shared/_Layout.cshtml
@@ -82,5 +82,6 @@
         }, 3000);
     </script>
     @await RenderSectionAsync("Scripts", required: false)
+    @Html.RenderPartialSectionScripts()
 </body>
 </html>
