--- a/DreamIsland/Views/Celebrities/_CelebritiesPartial.cshtml
+++ b/DreamIsland/Views/Celebrities/_CelebritiesPartial.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<CelebrityListingViewModel>
 
-<div class="row">
+<div class="row mb-3">
     @foreach (var celebrity in Model)
     {
         <div class="col-md-4">
-            <div class="card">
-                <img class="card-img-top" src=@celebrity.ImageUrl alt=@celebrity.Name>
+            <div class="card mb-3">
+                <img class="card-img-top" src=@celebrity.ImageUrl alt=@celebrity.Name height="400">
                 <div class="card-body text-center">
                     <h5 class="card-title text-center">@celebrity.Name</h5>
                     <p>@celebrity.Occupation</p>
