--- a/DreamIsland/Views/Islands/_IslandsPartial.cshtml
+++ b/DreamIsland/Views/Islands/_IslandsPartial.cshtml
@@ -4,8 +4,8 @@
     @foreach (var island in Model)
     {
         <div class="col-md-4">
-            <div class="card">
-                <img class="card-img-top" src=@island.ImageUrl alt=@island.Name>
+            <div class="card mb-3">
+                <img class="card-img-top" src=@island.ImageUrl alt=@island.Name height="400">
                 <div class="card-body text-center">
                     <h5 class="card-title text-center">@island.Name</h5>
                     <p>
