--- a/DreamIsland/Views/Celebrities/_CelebrityFormPartial.cshtml
+++ b/DreamIsland/Views/Celebrities/_CelebrityFormPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model CelebrityFormModel
+﻿@model CelebrityAddFormModel
 
 <div class="row">
     <div class=" offset-lg-2 col-lg-8 col-sm-12 offset-xl-3 col-xl-6">
