--- a/DreamIsland/Views/Celebrities/Add.cshtml
+++ b/DreamIsland/Views/Celebrities/Add.cshtml
@@ -8,6 +8,7 @@
 <div class="row">
     <div class=" offset-lg-2 col-lg-8 col-sm-12 offset-xl-3 col-xl-6">
         <h2 class="text-center">@ViewBag.FormTitle</h2>
+        <div asp-validation-summary="All" class="text-danger"></div>
         <form method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <label asp-for="Name"></label>
@@ -32,7 +33,7 @@
             <div class="form-group">
                 <label asp-for="CoverPhoto" class="control-label"></label>
                 <div class="custom-file">
-                    <input asp-for="CoverPhoto" class="custom-file-input">
+                    <input asp-for="CoverPhoto" class="custom-file-input" accept="image/*">
                     <label class="custom-file-label">Choose File...</label>
                 </div>
                 <span asp-validation-for="CoverPhoto" class="small text-danger"></span>
