--- a/DreamIsland/Views/Celebrities/Details.cshtml
+++ b/DreamIsland/Views/Celebrities/Details.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Dream Island - Details";
-    var photoPath = "~/celebrities/cover/" + (Model.ImageUrl ?? "noimage.jpg");
+    var photoPath = "/celebrities/cover/" + (Model.ImageUrl ?? "noimage.jpg");
 }
 
 <div class="h-100 row align-items-center">
