--- a/DreamIsland/Views/Celebrities/Edit.cshtml
+++ b/DreamIsland/Views/Celebrities/Edit.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Dream Island - Edit Celebrity";
     ViewBag.FormTitle = "Edit Celebrity";
-    var photoPath = "~/celebrities/cover/" + (Model.ImageUrl ?? "noimage.jpg");
+    var photoPath = "/celebrities/cover/" + (Model.ImageUrl ?? "noimage.jpg");
 }
 
 <div class="row">
