--- a/DreamIsland/Views/Celebrities/_CelebritiesPartial.cshtml
+++ b/DreamIsland/Views/Celebrities/_CelebritiesPartial.cshtml
@@ -4,7 +4,7 @@
 <div class="row mb-3">
     @foreach (var celebrity in Model)
     {
-        var photoPath = "~/celebrities/cover/" + (celebrity.ImageUrl ?? "noimage.jpg");
+        var photoPath = "/celebrities/cover/" + (celebrity.ImageUrl ?? "noimage.jpg");
 
         <div class="col-md-4">
             <div class="card mb-3">
