--- a/DreamIsland/Views/Islands/_IslandFormPartial.cshtml
+++ b/DreamIsland/Views/Islands/_IslandFormPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model IslandFormModel
+﻿@model IslandAddFormModel
 
 <div class="row">
     <div class=" offset-lg-2 col-lg-8 col-sm-12 offset-xl-3 col-xl-6">
@@ -62,7 +62,7 @@
     </div>
 </div>
 
-@Html.PartialSectionScripts(
+@*@Html.PartialSectionScripts(
     @<script>
     $('#customFile').on('change', function () {
         //get the file name
@@ -71,4 +71,4 @@
         $(this).next('.custom-file-label').html(fileName);
     })
     </script>
-)
+)*@
