--- a/DreamIsland/Views/Home/Index.cshtml
+++ b/DreamIsland/Views/Home/Index.cshtml
@@ -37,7 +37,10 @@ else
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="@firstIsland.ImageUrl" alt="@firstIsland.Name">
+                @{
+                    var photoPathFirstIsland = "/islands/cover/" + (firstIsland.ImageUrl ?? "noimage.jpg");
+                }
+                <img class="d-block w-100" src="@photoPathFirstIsland" alt="@firstIsland.Name">
                 <div class="carousel-caption d-none d-md-block">
                     <h5><a class="btn btn-primary" asp-controller="Islands" asp-action="Details" asp-route-id="@firstIsland.Id" asp-route-information="@firstIsland.Name">@firstIsland.Name</a></h5>
                     @{
@@ -55,7 +58,10 @@ else
             @if (secondIsland != null)
             {
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="@secondIsland.ImageUrl" alt="@secondIsland.Name">
+                    @{
+                        var photoPathSecondIsland = "/islands/cover/" + (secondIsland.ImageUrl ?? "noimage.jpg");
+                    }
+                    <img class="d-block w-100" src="@photoPathSecondIsland" alt="@secondIsland.Name">
                     <div class="carousel-caption d-none d-md-block">
                         <h5><a class="btn btn-primary" asp-controller="Islands" asp-action="Details" asp-route-id="@secondIsland.Id" asp-route-information="@secondIsland.Name">@secondIsland.Name</a></h5>
                         @{
@@ -74,7 +80,10 @@ else
             @if (thirdIsland != null)
             {
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="@thirdIsland.ImageUrl" alt="@thirdIsland.Name">
+                    @{
+                        var photoPathThirdIsland = "/islands/cover/" + (thirdIsland.ImageUrl ?? "noimage.jpg");
+                    }
+                    <img class="d-block w-100" src="@photoPathThirdIsland" alt="@thirdIsland.Name">
                     <div class="carousel-caption d-none d-md-block">
                         <h5><a class="btn btn-primary" asp-controller="Islands" asp-action="Details" asp-route-id="@thirdIsland.Id" asp-route-information="@thirdIsland.Name">@thirdIsland.Name</a></h5>
                         @{
