--- a/DreamIsland/Views/Islands/Add.cshtml
+++ b/DreamIsland/Views/Islands/Add.cshtml
@@ -1,12 +1,81 @@
-﻿@model IslandFormModel
+﻿@model IslandAddFormModel
 
 @{
     ViewBag.Title = "Dream Island - Add Island";
     ViewBag.FormTitle = "Add Island";
 }
 
-<partial name="_IslandFormPartial" model="@Model" />
+<div class="row">
+    <div class=" offset-lg-2 col-lg-8 col-sm-12 offset-xl-3 col-xl-6">
+        <h2 class="text-center">@ViewBag.FormTitle</h2>
+        <div asp-validation-summary="All" class="text-danger"></div>
+        <form method="post" enctype="multipart/form-data">
+            <div class="form-group">
+                <label asp-for="Name"></label>
+                <input asp-for="Name" class="form-control" placeholder="Enter island name...">
+                <span asp-validation-for="Name" class="small text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Location"></label>
+                <input asp-for="Location" class="form-control" placeholder="Enter island location..." />
+                <span asp-validation-for="Location" class="small text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Description"></label>
+                <textarea asp-for="Description" class="form-control" rows="5"></textarea>
+                <span asp-validation-for="Description" class="small text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="SizeInSquareKm"></label>
+                <input asp-for="SizeInSquareKm" type="number" step="0.01" class="form-control" placeholder="Enter island size in square km..." />
+                <span asp-validation-for="SizeInSquareKm" class="small text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="CoverPhoto" class="control-label"></label>
+                <div class="custom-file">
+                    <input asp-for="CoverPhoto" class="custom-file-input" accept="image/*">
+                    <label class="custom-file-label" for="customFile">Choose File...</label>
+                </div>
+                <span asp-validation-for="CoverPhoto" class="small text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Price"></label>
+                <input asp-for="Price" type="number" class="form-control" placeholder="Enter island price in USD..." />
+                <span asp-validation-for="Price" class="small text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="IslandRegionId"></label>
+                <select asp-for="IslandRegionId" class="form-control">
+                    @foreach (var region in Model.IslandRegions)
+                    {
+                        <option value="@region.Id">@region.Name</option>
+                    }
+                </select>
+            </div>
+            <div class="form-group">
+                <label asp-for="PopulationSizeId"></label>
+                <select asp-for="PopulationSizeId" class="form-control">
+                    @foreach (var size in Model.PopulationSizes)
+                    {
+                        <option value="@size.Id">@size.Name</option>
+                    }
+                </select>
+            </div>
+            <div class="row justify-content-center">
+                <input class="btn btn-primary mt-4" type="submit" value="@ViewBag.FormTitle" />
+            </div>
+        </form>
+    </div>
+</div>
 
 @section Scripts {
+    <script>
+        $(document).ready(function () {
+            $('.custom-file-input').on("change", function () {
+                var fileName = $(this).val().split("\\").pop();
+                $(this).next('.custom-file-label').html(fileName);
+            });
+        });
+    </script>
     <partial name="_ValidationScriptsPartial" />
 }
