--- a/DreamIsland/Views/Collectibles/Add.cshtml
+++ b/DreamIsland/Views/Collectibles/Add.cshtml
@@ -1,12 +1,51 @@
-﻿@model CollectibleFormModel
+﻿@model CollectibleAddFormModel
 
 @{
     ViewBag.Title = "Dream Island - Add Collectible";
     ViewBag.FormTitle = "Add Collectible";
 }
 
-<partial name="_CollectibleFormPartial" model="@Model" />
+<div class="row">
+    <div class=" offset-lg-2 col-lg-8 col-sm-12 offset-xl-3 col-xl-6">
+        <h2 class="text-center">@ViewBag.FormTitle</h2>
+        <div asp-validation-summary="All" class="text-danger"></div>
+        <form method="post" enctype="multipart/form-data">
+            <div class="form-group">
+                <label asp-for="Name"></label>
+                <input asp-for="Name" class="form-control" placeholder="Enter collectible name...">
+                <span asp-validation-for="Name" class="small text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Description"></label>
+                <textarea asp-for="Description" class="form-control" rows="5"></textarea>
+                <span asp-validation-for="Description" class="small text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="CoverPhoto" class="control-label"></label>
+                <div class="custom-file">
+                    <input asp-for="CoverPhoto" class="custom-file-input" accept="image/*">
+                    <label class="custom-file-label" for="customFile">Choose File...</label>
+                </div>
+                <span asp-validation-for="CoverPhoto" class="small text-danger"></span>
+            </div>
+            <div class="form-group">
+                <select asp-for="RarityLevel" asp-items="Html.GetEnumSelectList<RarityLevel>()" class="form-control"></select>
+            </div>
+            <div class="row justify-content-center">
+                <input class="btn btn-primary mt-4" type="submit" value="@ViewBag.FormTitle" />
+            </div>
+        </form>
+    </div>
+</div>
 
 @section Scripts {
+    <script>
+        $(document).ready(function () {
+            $('.custom-file-input').on("change", function () {
+                var fileName = $(this).val().split("\\").pop();
+                $(this).next('.custom-file-label').html(fileName);
+            });
+        });
+    </script>
     <partial name="_ValidationScriptsPartial" />
 }
