--- a/DreamIsland/Views/Collectibles/_CollectiblesPartial.cshtml
+++ b/DreamIsland/Views/Collectibles/_CollectiblesPartial.cshtml
@@ -3,10 +3,10 @@
 <div class="row">
     @foreach (var collectible in Model)
     {
-        var photoPath = "/collectibles/cover/" + (collectible.ImageUrl ?? "noimage.jpg");
+        var photoPath = "/resized/collectibles/" + (collectible.ImageUrl ?? "noimage.jpg");
         <div class="col-md-4">
             <div class="card mb-3">
-                <img class="card-img-top" src=@photoPath alt=@collectible.Name height="400">
+                <img class="card-img-top" src=@photoPath alt=@collectible.Name>
                 <div class="card-body text-center">
                     <h5 class="card-title text-center">@collectible.Name</h5>
                     <p>@collectible.RarityLevel</p>
