--- a/DreamIsland/Views/Home/Privacy.cshtml
+++ b/DreamIsland/Views/Home/Privacy.cshtml
@@ -1,6 +1,13 @@
 ﻿@{
     ViewBag.Title = "Dream Island - Privacy Policy";
 }
+
+<style>
+    h1 {
+  text-align: center;
+}
+</style>
+
 <h1>@ViewBag.Title</h1>
 
 <div class="container">
