--- a/DreamIsland/Views/Shared/_Layout.cshtml
+++ b/DreamIsland/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/Dream-Island_Logo.jpg" alt="Dream Island" height="40" width="40" /></a>
+                            <a class="nav-link text-dark logo" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/Dream-Island_Logo.jpg" alt="Dream Island" height="40" width="40" /></a>
                         </li>
                         <li class="nav-item">
                             <div class="dropdown">
