--- a/DreamIsland/wwwroot/css/site.css
+++ b/DreamIsland/wwwroot/css/site.css
@@ -7,6 +7,10 @@ a.navbar-brand {
   word-break: break-all;
 }
 
+.logo{
+    padding-top:0;
+}
+
 /* Provide sufficient contrast against white background */
 a {
   color: #0366d6;
